--- a/media_tools.ipynb
+++ b/media_tools.ipynb
@@ -1,13 +1,41 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Convert Simplified To Traditional"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "from mkv_processor import process_media"
+    "from src.convert_filenames import convert_filenames_simplified_to_traditional\n",
+    "\n",
+    "Users = \"Milk Tea\"\n",
+    "folder_path = os.path.join(\"C:\\\\\", \"Users\", Users, \"Downloads\")\n",
+    "convert_filenames_simplified_to_traditional(directory=folder_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# MKV 檔修正"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from src.mkv_processor import process_media"
    ]
   },
   {
