--- a/media_tools.ipynb
+++ b/media_tools.ipynb
@@ -44,10 +44,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder_path = os.path.join(\"media_data\", \"Shorts\")\n",
+    "folder_path = os.path.join(\"media_data\", \"Season 01\")\n",
     "process_media(\n",
     "    folder_path=folder_path,\n",
-    "    specified_audio=None,\n",
+    "    specified_sub=None,\n",
+    "    specified_audio=\"jpn\",\n",
     "    max_threads=os.cpu_count(),\n",
     ")"
    ]
@@ -69,7 +70,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
